@@ -2,14 +2,11 @@ package ar.edu.itba.pdc.proxy;
 
 import java.io.IOException;
 import java.net.InetSocketAddress;
-import java.net.URL;
 import java.nio.ByteBuffer;
 import java.nio.channels.SelectionKey;
 import java.nio.channels.SocketChannel;
 import java.util.HashMap;
 
-import ar.edu.itba.pdc.parser.HttpRequest;
-import ar.edu.itba.pdc.parser.HttpResponse;
 import ar.edu.itba.pdc.parser.Message;
 
 public class HttpSelectorProtocolClient implements TCPProtocol {
@@ -28,36 +25,53 @@ public class HttpSelectorProtocolClient implements TCPProtocol {
 
 	public SocketChannel handleRead(SelectionKey key) throws IOException {
 		// Client socket channel has pending data
-		SocketChannel clientChannel = (SocketChannel) key.channel();
-		ProxyConnection conn = proxyconnections.get(clientChannel);
+		SocketChannel channel = (SocketChannel) key.channel();
+		ProxyConnection conn = proxyconnections.get(channel);
 
-		ByteBuffer buf = conn.getBuffer(clientChannel);
-		long bytesRead = clientChannel.read(buf);
-		if (bytesRead == -1) { // Did the other end close?
-			clientChannel.close(); // ACA HAY QUE TENER EN CUENTA QUE SI LA CERRO EL
-								// SERVER, DEVOLVERIA MENOS 1, DESATTACHEARLO Y
-								// DECIRLE UQE NO TIENE CONEXION ASOCIADA ASI
-								// TIEN QUE CREAR UNA NUEVA YA QUE EL CLIENTE SE
-								// TIENTA A SEGUIR MANDANDO REQUESTS PORQUE
-								// TIENE UNA CONEXION ABIERTA, SI MURIO EL
-								// CLIENTE MATAR TODO.
-		} else if (bytesRead > 0) {
-			// Indicate via key that reading/writing are both of interest now.
-			key.interestOps(SelectionKey.OP_READ | SelectionKey.OP_WRITE);
-		}
-		return clientChannel;
+		ByteBuffer buf = conn.getBuffer(channel);
+        long bytesRead = 0;
+        try {
+                bytesRead = channel.read(buf);
+        } catch (IOException e) {
+                System.out.println("\nfallo el read");
+                return null;
+        }
+        System.out.println("\n[READ] cliente " + channel.socket().getInetAddress()+":"+channel.socket().getPort());
+        System.out.println("se leyeron : "+ bytesRead);
+//        conn.setBytesRead(bytesRead);
+        if (bytesRead == -1) { // Did the other end close?
+                if (conn.isClient(channel)) {
+                        System.out.println("\n[SENT CLOSE] cliente " + channel.socket().getInetAddress()+":"+channel.socket().getPort());
+                        if (conn.getServer() != null)
+                                conn.getServer().close(); // close the server channel
+                        channel.close();
+                        key.attach(null); // de-reference the proxy connection as it is no longer useful
+                        return null;
+                } else {
+                        System.out.println("\n[SENT CLOSE] servidor remoto " + channel.socket().getInetAddress()+":"+channel.socket().getPort());
+                        conn.getServer().close();
+                        conn.resetServer(); 
+                }
+                
+        } else if (bytesRead > 0) {
+                // Indicate via key that reading/writing are both of interest now.
+                key.interestOps(SelectionKey.OP_READ | SelectionKey.OP_WRITE);
+        }
+		return channel;
 	}
 
 	public void handleWrite(SelectionKey key) throws IOException {
 		/*
 		 * Channel is available for writing, and key is valid (i.e., client
 		 * channel not closed).
+		 * 
 		 */
+		
 		// Retrieve data read earlier
+		SocketChannel channel = (SocketChannel) key.channel();
 
 		/* ----------- PARSEO DE REQ/RESP ----------- */
-		ProxyConnection conn = (ProxyConnection) key.attachment();
-		SocketChannel channel = (SocketChannel) key.channel();
+		ProxyConnection conn = proxyconnections.get(channel);
 		// TODO ver de poner el parser no como singleton sino como clase que
 		// quede en el proxyconnection.. POR CONCURRENCIA.
 
@@ -66,20 +80,28 @@ public class HttpSelectorProtocolClient implements TCPProtocol {
 		/* ----------- CONEXION A SERVIDOR DESTINO ----------- */
 		SocketChannel serverchannel;
 		if ((serverchannel = conn.getServer()) == null) {
-			URL uri = new URL(((HttpRequest) message).getURI());
-			// URI uri = URI.create((());
-
+//		    String url = null;
+//          if (((HttpRequest) message).getURI().startsWith("/"))
+//                  url =  ((HttpRequest) message).getHeaders().get("host") + ((HttpRequest) message).getURI();
+//          else
+//                  url = ((HttpRequest) message).getURI();
+//          String[] splitted = url.split("http://");
+//          url = "http://" + (splitted.length == 2 ? splitted[1] : splitted[0]);
+//          URL uri = new URL(url);
+			
 			serverchannel = SocketChannel.open();
 			serverchannel.configureBlocking(false);
-			serverchannel.register(key.selector(), SelectionKey.OP_READ, conn);
 
-			int port = uri.getPort() == -1 ? 80 : uri.getPort();
-			if (!serverchannel.connect(new InetSocketAddress(uri.getHost(),
-					port))) {
+//			int port = uri.getPort() == -1 ? 80 : uri.getPort();
+//			if (!serverchannel.connect(new InetSocketAddress(uri.getHost(),
+//					port))) {
+			if (!serverchannel.connect(new InetSocketAddress("localhost",
+					8888))) {
 				while (!serverchannel.finishConnect()) {
 					System.out.print(".");
 				}
 			}
+			serverchannel.register(key.selector(), SelectionKey.OP_READ);
 			conn.setServer(serverchannel);
 		}
 
@@ -88,15 +110,12 @@ public class HttpSelectorProtocolClient implements TCPProtocol {
 		int byteswritten = 0;
 		boolean hasRemaining = true;
 		buf.flip(); // Prepare buffer for writing
-		String content = new String(buf.array()).substring(0,
-				buf.array().length);
-		System.out.println(content);
-		HttpResponse r = new HttpResponse();
+		
 		byteswritten = receiver.write(buf);
 		hasRemaining = buf.hasRemaining(); // Buffer completely written?
+		
 		buf.compact(); // Make room for more data to be read in
-		SocketChannel opposite = conn.getOppositeChannel(channel);
-		opposite.register(key.selector(), SelectionKey.OP_READ, conn); // receiver
+		receiver.register(key.selector(), SelectionKey.OP_READ, conn); // receiver
 		key.interestOps(SelectionKey.OP_READ); // Sender has finished
 												// writing
 
